--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/next": "^2.4.7",
     "@types/next-redux-wrapper": "^1.3.6",
     "@types/react": "^16.0.34",
+    "@types/styled-jsx": "^2.2.1",
     "concurrently": "^3.5.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
