--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
     "dev": "concurrently \"tsc --pretty --watch\" \"next\"",
     "prebuild": "tsc",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "test": "jest --no-cache",
-    "test:watch": "jest --no-cache --watch"
+    "test:watch": "jest --no-cache --watch",
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
+    "@types/next": "^2.4.7",
+    "@types/next-redux-wrapper": "^1.3.6",
+    "@types/styled-jsx": "^2.2.1",
+    "@types/react": "^16.0.34",
     "next": "^4.2.3",
     "next-redux-wrapper": "^1.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/jest": "^22.0.1",
-    "@types/next": "^2.4.7",
-    "@types/next-redux-wrapper": "^1.3.6",
-    "@types/react": "^16.0.34",
-    "@types/styled-jsx": "^2.2.1",
     "concurrently": "^3.5.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -40,8 +42,7 @@
     "raf": "^3.4.0",
     "react-test-renderer": "^16.2.0",
     "ts-jest": "^22.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "tslint": "^5.9.1"
   },
   "jest": {
     "transform": {
